Task list developed for employers

--- a/app/views/v4/_summary.html
+++ b/app/views/v4/_summary.html
@@ -35,8 +35,8 @@
         <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Copy docs</h4>
         <p class="govuk-body">Held in Trello tickets above</p>
         <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Employer service links</h4>                                                
-        <li><a href="v4/employer/login?startpage=1" class="govuk-link govuk-link--no-visited-state">Create an advert - first time user</a></li>
-        <li><a href="v4/employer/login" class="govuk-link govuk-link--no-visited-state">Create an advert - repeat user</a></li>
+        <li><a href="v4/employer/login" class="govuk-link govuk-link--no-visited-state">Create an advert</a></li>
+        <li><a href="v4/employer/login?startpage=1" class="govuk-link govuk-link--no-visited-state">Create an advert - first time user (with Start page)</a></li>        
         <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Provider service links</h4>                                        
         <li>Create a vacancy - in progress</li>
         <!--<li><a href="v4/provider/login" class="govuk-link govuk-link--no-visited-state">Create a vacancy - from Sign in</a></li>-->
