--- a/app/views/v4/employer/create/confirmation.html
+++ b/app/views/v4/employer/create/confirmation.html
@@ -24,7 +24,7 @@ Manage apprentices
     <p class="govuk-body">We’ll check the advert within one working day and let you know by email if you need to make any edits. <a href="../notifications/notification-preferences">Manage your emails</a>.</p>
     {% else %}
     <p class="govuk-body">
-      We’ll check the a and tell you within 24 hours if you need to make any edits. If the vacancy is not approved, we’ll let you know on the dashboard what changes you’ll need to make. <a href="../notifications/notification-preferences-new">Manage your recruitment emails</a> if you’d rather get an email.</p>
+      We’ll check the advert and tell you within 24 hours if you need to make any edits. If the vacancy is not approved, we’ll let you know on the dashboard what changes you’ll need to make. <a href="../notifications/notification-preferences-new">Manage your recruitment emails</a> if you’d rather get an email.</p>
     {% endif %}
     <p class="govuk-body">When we approve your advert, it will appear on the ​<a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship service</a> (opens in a new tab or window).</p>
     <form method="post">
