--- a/app/views/v4/employer/create/qualifications-list.html
+++ b/app/views/v4/employer/create/qualifications-list.html
@@ -1,7 +1,7 @@
 {% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
 
 {% block pageTitle %}
-Manage apprentices
+Qualifications - Your apprenticeship advert - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -34,14 +34,15 @@ Manage apprentices
         </p>
 
         <form method="post">
-    <div class="govuk-form-group">
-
-          <input type="submit" class="govuk-button" data-module="govuk-button" data-automation="btn-continue" name="button" value="Preview">
+          <div class="govuk-form-group">
+            {{ govukButton({
+              text: "Save and continue",
+              href: "things-to-consider"
+            }) }}       
+            <!--<input type="submit" class="govuk-button" data-module="govuk-button" data-automation="btn-continue" name="button" value="Preview">-->
           </div>
         </form>
-          </div>
+
       </div>
-
-{% block help %}{% include "includes/service-help.html" %}{% endblock %}
-
+    </div>
 {% endblock %}
