--- a/app/views/v4/employer/create/short-description.html
+++ b/app/views/v4/employer/create/short-description.html
@@ -6,7 +6,7 @@ Short description of the apprenticeship - Your apprenticeship adverts - {{servic
 
 {% block beforeContent %}
 {{super()}}
-<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+<!--<a href="javascript:history.back()" class="govuk-back-link">Back</a>-->
 {% endblock %}
 
 {% block content %}
