--- a/app/views/v4/employer/create/things-to-consider.html
+++ b/app/views/v4/employer/create/things-to-consider.html
@@ -1,32 +1,35 @@
 {% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
 
 {% block pageTitle %}
-Manage apprentices
+What else do you want the applicant to consider? (optional) - Your apprenticeship advert - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+  <div class="govuk-grid-column-two-thirds">    
         <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span>
     <form method="post">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
      <h1 class="govuk-fieldset__heading">
-       What else do you want the applicant to consider? (optional)
+      What else do you want the applicant to consider? (optional)
      </h1>
    </legend>
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="350">
         <div class="govuk-form-group">
-
-          <p class="govuk-hint">For example, if the vacancy will involve working outdoors or lifting heavy objects</p>
+          <div id="ThingsToConsider-hint" class="govuk-hint">
+            For example, if the vacancy will involve working outdoors or lifting heavy objects.
+          </div>
           <textarea class="govuk-textarea js-character-count " id="ThingsToConsider" name="ThingsToConsider" rows="5"></textarea>
         </div>
+        <div id="ThingsToConsider-hint-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
+          You can enter up to 350 characters
+        </div>
       </div>
-      <button type="submit" class="govuk-button" data-module="govuk-button">Save and preview</button>
+      <!--<button type="submit" class="govuk-button" data-module="govuk-button">Save and preview</button>-->
+      <button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button>
       <a href="vacnacy-preview?edit=no" class="govuk-body das-button--link">Cancel</a>
     </form>
   </div>
 </div>
-{% block help %}{% include "includes/service-help.html" %}{% endblock %}
 {% endblock %}
