Added check your answers screen to end of employer journey

--- a/app/views/v4/employer/create/confirmation.html
+++ b/app/views/v4/employer/create/confirmation.html
@@ -1,7 +1,7 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+Advert submitted for approval - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -31,16 +31,13 @@ Manage apprentices
     <div class="form-group inline">
       <div class="form-group">
         <a class="govuk-button" href="create-vacancy">Create another advert</a><br /><br />
-          {% if data.journey=='new' and data.user=='employer'%}
-          <a href="../dashboard-one" class="govuk-body das-button--link" data-module="govuk-button" type="submit">Return to dashboard</a>
-          {% elseif data.journey=='new' and data.user=='provider'%}
-          <a href="../dashboard-pending" class="ggovuk-body das-button--link" data-module="govuk-button" type="submit">Return to dashboard</a>
-          {% elseif data.user == 'provider' %}
-          <a href="../dashboard " class="govuk-body das-button--link" data-module="govuk-button" type="submit">Return to dashboard</a>
+          {% if data.journey=='new'%}
+          <a href="../dashboard-one" class="govuk-link govuk-link--no-visited-state">Return to dashboard</a>
+          <!--<a href="../dashboard-one" class="govuk-body das-button--link" data-module="govuk-button" type="submit">Return to dashboard</a>-->
           {% else %}
-          <a href="../dashboard?user=employer" class="govuk-button" data-module="govuk-body das-button--link" type="submit">Return to dashboard</a>
+          <a href="../dashboard" class="govuk-link govuk-link--no-visited-state">Return to dashboard</a>
+          <!--<a href="../dashboard?user=employer" class="govuk-button" data-module="govuk-body das-button--link" type="submit">Return to dashboard</a>-->
           {% endif %}
-
       </div>
     </div>
     </form>
