--- a/app/views/v4/employer/create/task-list.html
+++ b/app/views/v4/employer/create/task-list.html
@@ -42,7 +42,7 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               <a href="title?return_url=task-list" aria-describedby="eligibility-status">
-                What do you want to call this vacancy?
+                What do you want to call this advert?
               </a>
             </span>
             <!--{% if data.title %}
@@ -412,7 +412,8 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
             </span>
             <span class="task-list-submit-enabled" style="display:none">
               <span class="app-task-list__task-name">
-                  <a href="vacancy-preview" aria-describedby="list-convictions-status">  
+                  <!--<a href="vacancy-preview" aria-describedby="list-convictions-status">-->
+                    <a href="check-your-answers" aria-describedby="list-convictions-status">  
                   Check your answers and submit your advert
                 </a>
               </span>
